// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomObjectsImporter ::_buildRequests should build array of requests 1`] = `
Array [
  Object {
    "body": Object {
      "foo": "foo",
    },
    "method": "POST",
    "uri": "/test-project-key/custom-objects",
  },
  Object {
    "body": Object {
      "bar": "bar",
    },
    "method": "POST",
    "uri": "/test-project-key/custom-objects",
  },
]
`;

exports[`CustomObjectsImporter ::_createOrUpdateObjects should build array of all request objects 1`] = `
Array [
  Object {
    "body": Object {
      "container": "changedContainer",
      "key": "changedKey",
      "update": true,
      "value": "newInfo",
    },
    "method": "POST",
    "uri": "/test-project-key/custom-objects",
  },
  Object {
    "body": Object {
      "container": "newContainer",
      "key": "newKey",
      "value": "information",
    },
    "method": "POST",
    "uri": "/test-project-key/custom-objects",
  },
]
`;

exports[`CustomObjectsImporter ::_executeCreateAndUpdateAction when error is thrown without \`continueOnProblems\` should reject promise 1`] = `"Process stopped due to error while creating custom object. See summary for details"`;

exports[`CustomObjectsImporter ::_executeCreateAndUpdateAction when error is thrown without \`continueOnProblems\` should update summary \`createErrorCount\` 1`] = `"Process stopped due to error while creating custom object. See summary for details"`;

exports[`CustomObjectsImporter ::_executeCreateAndUpdateAction when error is thrown without \`continueOnProblems\` should update summary \`updateErrorCount\` 1`] = `"Process stopped due to error while updating custom object. See summary for details"`;

exports[`CustomObjectsImporter ::constructor should throw error if no \`apiConfig\` in \`options\` parameter 1`] = `"The constructor must be passed an \`apiConfig\` object"`;
